# education

./: .gitignore  CMakeLists.txt  README.md  calc-service-1.0.0-Linux.deb  et --hard HEAD@{1}  main.cpp
config/: config.json
db/: schema.sql  test.sql
src/: app  main.cpp
src/client/: simplclient.cpp  simpleclient
src/include/: DataCalculate.hpp  DbRepository.hpp  JsonCheck.hpp  JsonParse.hpp  KeyUtil.hpp  PgClient.hpp  PgResult.hpp  Printer.hpp  Signalhandler.hpp  Worker.hpp  cache.hpp  logger.h  logger.hpp  mathfunc.h  runner.hpp  server.hpp  task_queue.hpp
src/tests/: gtest.cpp  gtestnetw.cpp  main  test_client.cpp
systemd/: calc-service.service
